--- a/src/components/menu/side-menu/side-menu.ejs
+++ b/src/components/menu/side-menu/side-menu.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="side-menu__inner-main">
         <ul class="side-menu__items">
-            <li class="side__menu-item"><a class="side__menu-link" href="#">Личности</a></li>
+            <li class="side__menu-item active"><a class="side__menu-link" href="#">Личности</a></li>
             <li class="side__menu-item"><a class="side__menu-link" href="#">Военные</a></li>
             <li class="side__menu-item"><a class="side__menu-link" href="#">Исторические</a></li>
             <li class="side__menu-item"><a class="side__menu-link" href="#">Религиозные</a></li>
