--- a/src/components/card/mini-card/mini-card.ejs
+++ b/src/components/card/mini-card/mini-card.ejs
@@ -1,48 +1,55 @@
-<div class="mini-card__item">
-    <div class="mini-card__image-container">
-        <img class="mini-card__image" src="static/Rectangle 56.png" alt="">
-    </div>
-    <div class="mini-card__content-container">
+<div class="mini-article-card__item" data-dropdown-modal>
+    <img class="mini-article-card__image" src="static/Rectangle 56.png" alt="">
+    <div class="mini-article-card__content-container">
         <div class="content-category__container">
-            <div class="content-category__items">
+            <div class="mini-card-content-category__items">
                 <span class="content-category__item-link">Санкт-Петербург</span>
                 <span class="content-category__item-link">Религиозные</span>
             </div>
-            <span class="content-category__triplets">
+            <span class="content-category__triplets" data-modal-triplets>
                <svg class="content-category__triplets-logo" width="4" height="16" viewBox="0 0 4 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0.5 14C0.5 13.1716 1.17157 12.5 2 12.5C2.82843 12.5 3.5 13.1716 3.5 14C3.5 14.8284 2.82843 15.5 2 15.5C1.17157 15.5 0.5 14.8284 0.5 14ZM0.500001 8C0.500001 7.17157 1.17157 6.5 2 6.5C2.82843 6.5 3.5 7.17157 3.5 8C3.5 8.82843 2.82843 9.5 2 9.5C1.17157 9.5 0.500001 8.82843 0.500001 8ZM2 0.5C1.17157 0.5 0.500001 1.17157 0.500001 2C0.500001 2.82843 1.17157 3.5 2 3.5C2.82843 3.5 3.5 2.82843 3.5 2C3.5 1.17157 2.82843 0.5 2 0.5Z" fill="#777C86"/>
                 </svg>
             </span>
+            <% let dataCategoryLink = [
+                {title: "Военные", link: "#"},
+                {title: "Памятники", link: "#"},
+                {title: "Пример тега", link: "#"},
+                {title: "Пример тега", link: "#"},
+                {title: "Пример тега", link: "#"},
+                {title: "Пример тега", link: "#"}]; %>
+            <%- include('../../modal/modal-category-menu/modal-category-menu', {dataCategoryLink}); -%>
         </div>
-        <div class="mini-card__content">
+        <div class="mini-article-card__content">
             <h2 class="mini-menu__title">
-                Казанский собор в<br/> Санкт-Петербурге
+                Смольный собор
             </h2>
             <p class="mini-menu__text">
                 Казанский собор в Санкт-Петербурге относится к числу крупнейших храмов города. Он находится в самом сердце Северной столицы и выходит фасадами на Невский проспект и канал Грибоедова. Казанский собор пользуется большой популярностью среди туристов – как отечественных, так и иностранных. Такое внимание обусловлено, в первую очередь, величественным внешним видом, архитектурой и внутренним ...
             </p>
         </div>
-        <div class="mini-card__footer-panel">
-            <span class="mini-card__time-create">16.05.2020</span>
-            <div class="footer-panel__items">
-                <div class="footer-panel__item">
+        <div class="mini-article-card__footer-panel">
+            <span class="mini-article-card__time-create">16.05.2020</span>
+            <div class="mini-footer-panel__items">
+                <div class="mini-footer-panel__item">
                     <svg width="22" height="18" viewBox="0 0 22 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M11 0C16.392 0 20.878 3.88 21.819 9C20.879 14.12 16.392 18 11 18C5.608 18 1.122 14.12 0.181 9C1.121 3.88 5.608 0 11 0ZM11 16C13.0395 15.9996 15.0184 15.3068 16.6129 14.0352C18.2073 12.7635 19.3229 10.9883 19.777 9C19.3212 7.0133 18.2049 5.24 16.6106 3.97003C15.0163 2.70005 13.0383 2.00853 11 2.00853C8.9617 2.00853 6.98369 2.70005 5.38938 3.97003C3.79506 5.24 2.67877 7.0133 2.223 9C2.6771 10.9883 3.79267 12.7635 5.38714 14.0352C6.98161 15.3068 8.96053 15.9996 11 16ZM11 13.5C9.80653 13.5 8.66193 13.0259 7.81802 12.182C6.97411 11.3381 6.5 10.1935 6.5 9C6.5 7.80653 6.97411 6.66193 7.81802 5.81802C8.66193 4.97411 9.80653 4.5 11 4.5C12.1935 4.5 13.3381 4.97411 14.182 5.81802C15.0259 6.66193 15.5 7.80653 15.5 9C15.5 10.1935 15.0259 11.3381 14.182 12.182C13.3381 13.0259 12.1935 13.5 11 13.5ZM11 11.5C11.663 11.5 12.2989 11.2366 12.7678 10.7678C13.2366 10.2989 13.5 9.66304 13.5 9C13.5 8.33696 13.2366 7.70107 12.7678 7.23223C12.2989 6.76339 11.663 6.5 11 6.5C10.337 6.5 9.70107 6.76339 9.23223 7.23223C8.76339 7.70107 8.5 8.33696 8.5 9C8.5 9.66304 8.76339 10.2989 9.23223 10.7678C9.70107 11.2366 10.337 11.5 11 11.5Z" fill="#777C86"/>
                     </svg>
-                    <span class="footer-panel__item-counter">2,3K</span>
+                    <span class="mini-footer-panel__item-counter">2,3K</span>
                 </div>
-                <div class="footer-panel__item">
+                <div class="mini-footer-panel__item">
                     <svg width="22" height="21" viewBox="0 0 22 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M13.6 8.00003H20C20.5304 8.00003 21.0391 8.21074 21.4142 8.58581C21.7893 8.96089 22 9.46959 22 10V12.104C22.0003 12.3654 21.9493 12.6243 21.85 12.866L18.755 20.381C18.6795 20.5642 18.5513 20.7209 18.3866 20.8311C18.2219 20.9413 18.0282 21.0001 17.83 21H1C0.734784 21 0.48043 20.8947 0.292893 20.7071C0.105357 20.5196 0 20.2652 0 20V10C0 9.73481 0.105357 9.48046 0.292893 9.29292C0.48043 9.10538 0.734784 9.00003 1 9.00003H4.482C4.6421 9.00007 4.79986 8.96167 4.94203 8.88806C5.0842 8.81445 5.20662 8.70778 5.299 8.57703L10.752 0.850026C10.8209 0.752339 10.9226 0.682586 11.0385 0.653416C11.1545 0.624246 11.277 0.637589 11.384 0.691026L13.198 1.59803C13.7085 1.85319 14.1163 2.27534 14.3537 2.79434C14.5911 3.31334 14.6438 3.89795 14.503 4.45103L13.6 8.00003ZM6 10.588V19H17.16L20 12.104V10H13.6C13.2954 9.99998 12.9948 9.93036 12.7212 9.79648C12.4476 9.6626 12.2082 9.468 12.0213 9.22751C11.8343 8.98703 11.7048 8.70702 11.6425 8.40885C11.5803 8.11068 11.5869 7.80223 11.662 7.50703L12.565 3.95903C12.5933 3.84835 12.5828 3.73134 12.5353 3.62745C12.4878 3.52357 12.4062 3.43907 12.304 3.38803L11.643 3.05803L6.933 9.73003C6.683 10.084 6.363 10.374 6 10.588ZM4 11H2V19H4V11Z" fill="#777C86"/>
                     </svg>
-                    <span class="footer-panel__item-counter">1,5К</span>
+                    <span class="mini-footer-panel__item-counter">1,5К</span>
                 </div>
-                <div class="footer-panel__item">
-                    <svg width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <div class="mini-footer-panel__item">
+                    <svg data-modal-share width="21" height="18" viewBox="0 0 21 18" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M10 12V17.5L20.5 9L10 0.5V6C4.477 6 0 10.477 0 16C0 16.273 0.0100002 16.543 0.0319996 16.81C0.795599 15.3582 1.94152 14.1427 3.34587 13.2949C4.75023 12.4471 6.3596 11.9994 8 12H10ZM12 13.308V10H8C6.58 10 5.209 10.271 3.943 10.773C4.69332 9.90182 5.62299 9.20302 6.66839 8.72442C7.71379 8.24582 8.85025 7.99871 10 8H12V4.692L17.321 9L12 13.308Z" fill="#777C86"/>
                     </svg>
                 </div>
             </div>
+            <%- include('../../modal/modal-share-menu/modal-share-menu'); -%>
         </div>
     </div>
 </div>
