--- a/src/components/card/mini-card/mini-card.scss
+++ b/src/components/card/mini-card/mini-card.scss
@@ -1,4 +1,4 @@
-.mini-card__item {
+.mini-article-card__item {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -6,36 +6,41 @@
   box-shadow: 0 2px 15px rgba(93, 125, 142, 0.3);
   border-radius: 10px;
   max-width: 370px;
-  max-height: 526px;
 }
-.mini-card__item:hover {
+
+.mini-article-card__item:hover {
   box-shadow: 0 2px 10px rgba(93, 125, 142, 0.5);
 }
 
-.mini-card__content-container {
-  padding: 12px 25px 28px 25px;
+.mini-article-card__content-container {
+  padding: 20px 25px 28px 25px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  position: relative;
 }
 
 // bread crumbs
-.mini-card__item .content-category__container {
+.mini-article-card__item .content-category__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.mini-card__item .content-category__item-link {
+.mini-article-card__item .content-category__item-link {
   font-size: 14px;
   line-height: 16px;
   text-decoration-line: underline;
   color: #777C86;
   position: relative;
-  padding-right: 24px;
+  cursor: pointer;
 }
 
-.mini-card__item .content-category__triplets {
+.mini-article-card__item .content-category__item-link:not(:first-child) {
+  padding-left: 24px;
+}
+
+.mini-article-card__item .content-category__triplets {
   background-color: transparent;
   border-radius: 50%;
   height: 24px;
@@ -44,9 +49,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
-.mini-card__item .content-category__item-link:not(:last-child):after {
+.mini-article-card__item .content-category__item-link:not(:first-child):after {
   content: "";
   background: #C4C4C4;
   border-radius: 50%;
@@ -54,23 +60,31 @@
   width: 4px;
   height: 4px;
   top: 50%;
-  right: 10px;
+  left: 10px;
   transform: translateY(-50%);
 }
 
-// bread crumbs effects
-.mini-card__item:hover .content-category__item-link:last-child {
-  color:#003C5A;
+.mini-card-content-category__items {
+  height: 20px;
+  overflow: hidden;
 }
 
-.mini-card__item:hover .card-category__triplets {
+// bread crumbs effects
+.mini-article-card__item:hover .content-category__item-link:last-child {
+  color: #003C5A;
+}
+
+.mini-article-card__item:hover .content-category__triplets {
   background-color: #F2F2F2;
+}
+
+.content-category__triplets:active {
+  background-color: #FFFFFF!important;
 }
 
 // content
 .mini-menu__title {
-  margin-top: 15px;
-  margin-bottom: 11px;
+  margin: 15px 0;
   line-height: 20px;
   font-size: 24px;
 }
@@ -78,7 +92,6 @@
 .mini-menu__text {
   font-size: 14px;
   line-height: 22px;
-  margin-bottom: 16px;
   overflow: hidden;
   display: -webkit-box;
   -webkit-line-clamp: 5;
@@ -86,37 +99,90 @@
 }
 
 // footer panel
-.mini-card__footer-panel {
+.mini-article-card__footer-panel {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
 }
 
-.mini-card__footer-panel .footer-panel__items {
+.mini-article-card__footer-panel .mini-footer-panel__items {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  flex: 1;
+  margin-top: 16px;
 }
 
-.mini-card__footer-panel .footer-panel__item {
+.mini-article-card__footer-panel .mini-footer-panel__item {
   display: flex;
   align-items: center;
 }
 
-.mini-card__footer-panel .footer-panel__item:not(:last-child) {
-  margin-right: 17px;
+.mini-article-card__footer-panel .mini-footer-panel__item:not(:last-child) {
+  margin-right: 12px;
 }
 
-.mini-card__footer-panel .footer-panel__item-counter {
+.mini-article-card__footer-panel .mini-footer-panel__item-counter {
   font-size: 12px;
-  line-height: 24px;
   color: #777C86;
   margin-left: 5px;
 }
 
-.mini-card__time-create {
+.mini-article-card__time-create {
   font-size: 12px;
   line-height: 14px;
   color: #777C86;
+  flex: 1;
+  margin-top: 16px;
+  margin-right: 10px;
 }
 
+
+@media (max-width: 770.98px) {
+  .mini-article-card__item {
+    max-width: 330px;
+  }
+  .mini-article-card__image {
+    width: 100%;
+  }
+}
+
+@media (max-width: 577.98px) {
+  .mini-article-card__time-create {
+    flex: 2
+  }
+  .mini-footer-panel__items {
+    flex: 1;
+  }
+  .mini-article-card__footer-panel .mini-footer-panel__item:not(:last-child) {
+    margin-right: 20px;
+  }
+  .mini-article-card__item {
+    max-width: 100%;
+  }
+  .mini-menu__text {
+    -webkit-line-clamp: 4;
+  }
+}
+
+@media (max-width: 400.98px) {
+  .mini-article-card__item {
+    max-width: 100%;
+  }
+  .mini-menu__text {
+    -webkit-line-clamp: 7;
+  }
+  .mini-article-card__content-container {
+    padding: 19px 20px 18px 20px;
+  }
+  .mini-article-card__footer-panel .footer-panel__item:not(:last-child) {
+    margin-right: 11px;
+  }
+}
+
+@media (max-width: 350.98px) {
+  .mini-article-card__footer-panel .mini-footer-panel__item:not(:last-child) {
+    margin-right: 10px;
+  }
+}
