--- a/src/components/location-menu/location-Menu.scss
+++ b/src/components/location-menu/location-Menu.scss
@@ -1,12 +1,18 @@
 .location-menu {
+  position: relative;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: #FFFFFF;
+  z-index: 999;
 }
 
 //address
 .location-address {
   display: flex;
   align-items: center;
+  margin-right: 15px;
 }
 
 .location-address .location-address__title {
@@ -56,15 +62,19 @@
 
 .location-search__input {
   padding: 6px 40px 6px 15px;
+  border: 1px solid #777C86;
+  border-radius: 18px;
   width: 370px;
   height: 36px;
   display: flex;
-  background-color: #F2F2F2;
-  border-radius: 20px;
+  color: #777C86;
 }
 
-.location-search__input::placeholder {
+.location-search__input:placeholder-shown {
   color: #BDBDBD;
+  background-color: #F2F2F2;
+  border-color: transparent;
+  border-radius: 20px;
 }
 
 .location-search__input:focus {
@@ -87,4 +97,53 @@
 
 .location-search__submit:hover path {
   fill: #777C86;
+}
+
+@media (max-width: 860.98px) {
+  .location-menu {
+    position: fixed;
+    top: 106px;
+    height: 51px;
+    padding: 0 39px 15px 39px;
+    left: 0;
+    right: 0;
+  }
+  .location-menu.box-shadow {
+    box-shadow: 0 9px 17px -5px rgba(34, 60, 80, 0.25);
+  }
+}
+@media (max-width: 770.98px) {
+  .location-address .location-address__title {
+    margin-right: 5px;
+  }
+  .location-search__input {
+    max-width: 330px;
+  }
+  .location-address {
+    margin-right: 30px;
+  }
+}
+
+@media (max-width: 690.98px) {
+  .location-search__input {
+    max-width: 100%;
+    width: 100%;
+  }
+  .location-address {
+    display: none;
+  }
+  .location-search__form {
+    width: 100%;
+  }
+}
+
+@media (max-width: 576.98px) {
+  .location-menu {
+    padding: 0 33px 15px 33px;
+  }
+}
+@media (max-width: 450.98px) {
+  .location-menu {
+    padding: 0 15px 15px 15px!important;
+  }
 }
