--- a/src/index.ejs
+++ b/src/index.ejs
@@ -2,37 +2,40 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+    <meta name="HandheldFriendly" content="true">
   <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.css" />
+  <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
+
+  <script src="https://unpkg.com/swiper/swiper-bundle.js"></script>
+  <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 </head>
 <body>
 <%- include('components/menu/header__nav/header__nav'); -%>
 <%- include('components/header/header'); -%>
 
 <div class="wrapper">
-  <div class="main-menu__wrapper">
-    <%- include('components/menu/side-menu/side-menu'); -%>
-  </div>
-  <div class="wrapper-content">
-    <%- include('components/location-menu/location-menu'); -%>
-    <div class="content">
-      <%- include('components/card/main-card/main-card'); -%>
-      <div class="card-items">
-        <%- include('components/card/mini-card/mini-card'); -%>
-      </div>
-      <span class="show-all-card_btn">Показать еще</span>
+    <div class="main-menu__wrapper">
+        <%- include('components/menu/side-menu/side-menu'); -%>
     </div>
-  </div>
+    <div class="wrapper-content">
+        <%- include('components/location-menu/location-menu'); -%>
+        <div class="content">
+            <%- include('components/card/main-card/main-card'); -%>
+            <%- include('components/card/card-items/card-items'); -%>
+        </div>
+    </div>
 </div>
 
 <%- include('components/footer/footer'); -%>
 <%- include('components/menu/footer-nav/footer-nav'); -%>
-  <script src="main.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
