--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -41,6 +41,11 @@ nav {
   padding: 0;
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 body {
   font-size: 14px;
   color: #333333;
