--- a/src/components/content-block/gallery/gallery.scss
+++ b/src/components/content-block/gallery/gallery.scss
@@ -1,35 +1,33 @@
 .article-gallery__container {
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  height: 100%;
+  --gap: 30px;
+  display: grid;
+  gap: var(--gap);
+  grid-template-columns: calc(60% - var(--gap) / 2) calc(40% - var(--gap) / 2);
+  grid-template-rows: repeat(2, calc(225px - var(--gap) / 2));
   margin: 40px 0;
 }
 
-.article-gallery__left {
+.article-gallery__image {
   width: 100%;
   height: 100%;
-  min-width: 450px;
-}
-
-.article-gallery__right {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-end;
-  align-items: stretch;
-  max-height: 210px;
-  margin-left: 30px;
-}
-
-.article-gallery__right .article-gallery__image {
-  max-width: 290px;
+  object-fit: cover;
   border-radius: 10px;
+
+  &:first-child {
+    grid-row: 1 / 3;
+  }
 }
 
-.article-gallery__right .article-gallery__image:first-child {
-  margin-bottom: 30px;
-}
+@media (max-width: 767px) {
+  .article-gallery__container {
+    --gap: 20px;
+    gap: 30px var(--gap);
+    grid-template-columns: repeat(2, calc(50% - var(--gap) / 2));
+    grid-template-rows: auto auto;
+  }
 
-.article-gallery__left .article-gallery__image {
-  max-width: 450px;
+  .article-gallery__image:first-child {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+  }
 }
